# cookiecutter-data-science

./: cookiecutter.json
{{ cookiecutter.repo_name }}/: .env  .gitignore.gitignore  .pdm.toml  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/docs/source/: conf.py  index.md
{{ cookiecutter.repo_name }}/{{cookiecutter.repo_name}}/conf/: config.yaml
{{ cookiecutter.repo_name }}/{{cookiecutter.repo_name}}/conf/db/: denodo.yaml  hive.yaml  teradata.yaml
{{ cookiecutter.repo_name }}/{{cookiecutter.repo_name}}/conf/hydra/job_logging/: custom.yaml
